# tui-asset-editor

./: Cargo.toml  LICENSE  README.md
asset/def/: aura.ron  item.ron
src/arkanet/mechanic/: Cargo.toml
src/arkanet/mechanic/src/: lib.rs
src/arkanet/mechanic/src/aura/: aura.rs
src/arkanet/mechanic/src/item/: equipment.rs  item.rs  mod.rs
src/arkanet/mechanic/test/data/: test_aura.ron
src/arkanet/system/: Cargo.toml
src/arkanet/system/src/: lib.rs
src/arkanet/system/src/asset/: asset_lib.rs
src/game/mechanic/: Cargo.toml
src/game/mechanic/src/aura/: aura.rs
src/game/mechanic/src/item/: equipment.rs  item.rs
src/game/system/: Cargo.toml
src/game/system/src/asset/: asset_lib.rs  mod.rs
src/terminal/: main.rs
src/terminal/screen/: Cargo.toml
src/terminal/screen/src/: database.rs  demo.rs  demo_color.rs  demo_image.rs  lib.rs  menu.rs
src/terminal/system/: Cargo.toml
src/terminal/system/src/: lib.rs  terminal_image.rs  theme.rs  tui.rs  window.rs
src/tool/asset/: main.rs
