[package]
name = "arkanet"
version = "0.1.0"
edition = "2021"

# Enables maximum optimization for dependencies.
# Slower clean build time, but will run much faster.
[profile.dev.package."*"]
opt-level = 3

# Enables some optimzations.
[profile.dev]
opt-level = 1

[workspace]
members = ["src/arkanet/mechanic"]

[[bin]]
name = "terminal"
path = "src/terminal/main.rs"

[workspace.dependencies]
arka_mechanic = { path = "src/arkanet/mechanic/" }
arka_system = { path = "src/arkanet/system/" }
term_screen = { path = "src/terminal/screen" }
term_system = { path = "src/terminal/system" }
bevy_reflect = { version = "0.15.3" }
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
image = "0.25.5"
serde = { version = "1", features = ["derive"] }
ron = "0.8.1"

[dependencies]
arka_mechanic = { workspace = true }
arka_system = { workspace = true }
term_screen = { workspace = true }
term_system = { workspace = true }
bevy_reflect = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
