[package]
name = "asset-editor"
version = "0.1.0"
edition = "2021"
default-run = "terminal"

# Enables maximum optimization for dependencies.
# Slower clean build time, but will run much faster.
[profile.dev.package."*"]
opt-level = 3

# Enables some optimzations.
[profile.dev]
opt-level = 1

[workspace]
members = ["src/game/mechanic"]

[[bin]]
name = "terminal"
path = "src/terminal/main.rs"

[workspace.dependencies]
game_mechanic = { path = "src/game/mechanic/" }
game_system = { path = "src/game/system/" }
term_screen = { path = "src/terminal/screen" }
term_system = { path = "src/terminal/system" }
bevy_reflect = { version = "0.15.3" }
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
image = "0.25.5"
serde = { version = "1", features = ["derive"] }
ron = "0.8.1"

[dependencies]
game_mechanic = { workspace = true }
game_system = { workspace = true }
term_screen = { workspace = true }
term_system = { workspace = true }
bevy_reflect = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
