[package]
name = "term_screen"
version = "0.1.0"
edition = "2021"

[dependencies]
game_mechanic = { workspace = true }
game_system = { workspace = true }
bevy_reflect = { workspace = true }
crossterm = { workspace = true }
image = { workspace = true }
ratatui = { workspace = true }
term_system = { workspace = true }
